turtleart.lessons.turtleart.Main.HouseMany.scala.error
Source:21: error: not found: value ||
			if (k != 1 && j != 1) || (k != 1 && j != 2)	maison(30)
                                              ^